--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url=r'/home/yoga/Desktop/prof.Vanessa/data'"
+    "#linux\n",
+    "# url=r'/home/yoga/Desktop/prof.Vanessa/data'\n",
+    "#win10\n",
+    "url=r'C:\\Users\\Kelvin Kung\\Desktop\\prof.Vanessa-1\\Data'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,16 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ciclo 3 (Descarga) 1) Discharging.csv\n",
       "20210722_12_Ch3-Li_BTS-5cycles-023246-ch2.txt\n",
-      "Ciclo 2 (carga) 1) Charging.csv\n"
+      "Ciclo 2 (carga) 1) Charging.csv\n",
+      "Ciclo 3 (Descarga) 1) Discharging.csv\n"
      ]
     }
    ],
@@ -426,10 +429,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "36cf091cbb3611feebc74edf343f0b209fb07599f48fae6e295c00103f31d408"
+   "hash": "900a796fec8d664d95565cec54138766fa950b263dcd3b5baa540d3e8f8c1571"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('venv': venv)",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -443,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
