--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "# import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,6 +159,121 @@
     "            c=data_icharger(c)\n",
     "        elif z=='bts':\n",
     "            c=data_bts(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0         0\n",
+      "1         2\n",
+      "2         4\n",
+      "3         6\n",
+      "4         8\n",
+      "       ... \n",
+      "894    1788\n",
+      "895    1790\n",
+      "896    1792\n",
+      "897    1794\n",
+      "898    1796\n",
+      "Name: Zeit [s], Length: 899, dtype: int64 Input [mV]\n",
+      "0         0\n",
+      "1         2\n",
+      "2         4\n",
+      "3         6\n",
+      "4         8\n",
+      "       ... \n",
+      "894    1788\n",
+      "895    1790\n",
+      "896    1792\n",
+      "897    1794\n",
+      "898    1796\n",
+      "Name: Zeit [s], Length: 899, dtype: int64 mVoltage accu [mV]\n",
+      "0         0\n",
+      "1         2\n",
+      "2         4\n",
+      "3         6\n",
+      "4         8\n",
+      "       ... \n",
+      "894    1788\n",
+      "895    1790\n",
+      "896    1792\n",
+      "897    1794\n",
+      "898    1796\n",
+      "Name: Zeit [s], Length: 899, dtype: int64 Current [mA]\n",
+      "0         0\n",
+      "1         2\n",
+      "2         4\n",
+      "3         6\n",
+      "4         8\n",
+      "       ... \n",
+      "894    1788\n",
+      "895    1790\n",
+      "896    1792\n",
+      "897    1794\n",
+      "898    1796\n",
+      "Name: Zeit [s], Length: 899, dtype: int64 Capacity [mmAh]\n",
+      "0         0\n",
+      "1         2\n",
+      "2         4\n",
+      "3         6\n",
+      "4         8\n",
+      "       ... \n",
+      "894    1788\n",
+      "895    1790\n",
+      "896    1792\n",
+      "897    1794\n",
+      "898    1796\n",
+      "Name: Zeit [s], Length: 899, dtype: int64 Power [W]\n",
+      "0         0\n",
+      "1         2\n",
+      "2         4\n",
+      "3         6\n",
+      "4         8\n",
+      "       ... \n",
+      "894    1788\n",
+      "895    1790\n",
+      "896    1792\n",
+      "897    1794\n",
+      "898    1796\n",
+      "Name: Zeit [s], Length: 899, dtype: int64 Energy [Wh]\n",
+      "0         0\n",
+      "1         2\n",
+      "2         4\n",
+      "3         6\n",
+      "4         8\n",
+      "       ... \n",
+      "894    1788\n",
+      "895    1790\n",
+      "896    1792\n",
+      "897    1794\n",
+      "898    1796\n",
+      "Name: Zeit [s], Length: 899, dtype: int64 Int. Temperatur [ï¿½C]\n",
+      "0         0\n",
+      "1         2\n",
+      "2         4\n",
+      "3         6\n",
+      "4         8\n",
+      "       ... \n",
+      "894    1788\n",
+      "895    1790\n",
+      "896    1792\n",
+      "897    1794\n",
+      "898    1796\n",
+      "Name: Zeit [s], Length: 899, dtype: int64 Ext. Temperatur [ï¿½C]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ke=c.keys()\n",
+    "for a in ke[1:]:\n",
+    "    print(c[ke[0]],a)"
    ]
   },
   {
