--- a/monitor_Icharger/testing.ipynb
+++ b/monitor_Icharger/testing.ipynb
@@ -53,6 +53,7 @@
     "import serial\n",
     "import time\n",
     "import serial.tools.list_ports\n",
+    "from datetime import datetime\n",
     "from collections import Counter"
    ]
   },
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "79c40024-30be-45e2-bf6a-a87551053917",
    "metadata": {},
    "outputs": [],
@@ -128,16 +129,16 @@
     "    Determines which is the current state type.\n",
     "    '''\n",
     "    columns = data.split(delimiter)  \n",
-    "    result = [str(int(columns[i])/1000) if i==6 else columns[i] for i in selected_columns]\n",
-    "    if result[2]=='1':\n",
+    "    result = [str(int(columns[i])/1000) if i==7 else columns[i] for i in selected_columns]\n",
+    "    if result[3]=='1':\n",
     "        estado='charging'\n",
-    "    elif result [2]=='2':\n",
+    "    elif result [3]=='2':\n",
     "        estado='discharging'\n",
-    "    elif result [2]=='4':\n",
+    "    elif result [3]=='4':\n",
     "        estado='rest'\n",
-    "    elif result[2]=='6':\n",
+    "    elif result[3]=='6':\n",
     "        estado='finished'\n",
-    "    result[2]=estado\n",
+    "    result[3]=estado\n",
     "    return delimiter.join(result),estado #return the data as string\n",
     "\n",
     "def save_file(estado,bateria,capacidad,ciclo,data):\n",
@@ -159,7 +160,7 @@
     "        if not(file_name in dict_data):\n",
     "            dict_data[file_name]=[]\n",
     "            state_file = open(file_name, \"w\")\n",
-    "            state_file.write('date;time;battery_state;voltage[V];current[mA];capacity[mAh]'+'\\n')#setting column titles\n",
+    "            state_file.write('date;system_hour;cycle_time;battery_state;voltage[V];current[mA];capacity[mAh]'+'\\n')#setting column titles\n",
     "            state_file.flush()\n",
     "        dict_data[file_name].append(data)\n",
     "        estados_pasados.pop(0)\n",
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "235a878a-0a33-405c-8e78-a997494a2b74",
    "metadata": {},
    "outputs": [
@@ -195,19 +196,26 @@
     "log_to_file=True\n",
     "estados_pasados=[]\n",
     "dict_data={}\n",
-    "columns_to_extract=[0,1,3,6,7,16]#date, time, battery_state(charing/resting/discharging),voltage(V),current(mA),capacity(mAh)\n",
+    "columns_to_extract=[0,1,2,4,7,8,17]#date, system_time,cycle_time, battery_state(charing/resting/discharging),voltage(V),current(mA),capacity(mAh)\n",
     "bateria='1'\n",
     "capacidad='1000'\n",
     "ciclo=1\n",
+    "base_time=datetime.strptime(\"08:51:02\",\"%H:%M:%S\")\n",
     "\n",
     "if log_to_file:\n",
     "    log_file = open(f\"data_original_{bateria}_{capacidad}_{ciclo}.csv\", \"w\")\n",
-    "    log_file.write('date;time;battery_state;voltage[V];current[mA];capacity[mAh]'+'\\n')#setting column titles\n",
+    "    log_file.write('date;system_hour;cicle_time;battery_state;voltage[V];current[mA];capacity[mAh]'+'\\n')#setting column titles\n",
     "    log_file.flush()\n",
     "else:\n",
     "    log_file = None\n",
     "                \n",
     "for a in data_original[:-1]:\n",
+    "    #adding cycle time (stopwatch like)\n",
+    "    aux=a.split(';')\n",
+    "    time1=datetime.strptime(aux[1],\"%H:%M:%S\")\n",
+    "    diff=str(abs(time1-base_time))\n",
+    "    aux.insert(2,diff)\n",
+    "    a=';'.join(aux)\n",
     "    data,estado=extract_columns(a,columns_to_extract)\n",
     "    if estados_pasados==['finished','finished','finished','finished']:\n",
     "        print(\"finished cicles \\nclosing program\")\n",
@@ -224,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "b851755e-00b4-4207-a1db-98b9aab06a0e",
    "metadata": {},
    "outputs": [],
@@ -234,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "c199eed8-d118-448b-b909-ff9f22af6f40",
    "metadata": {},
    "outputs": [],
@@ -242,69 +250,75 @@
     "import os\n",
     "import csv\n",
     "from pathlib import Path\n",
-    "from datetime import datetime\n",
+    "import re\n",
     "txt_files = [f for f in os.listdir(os.getcwd()) if f.endswith('.csv') and os.path.isfile(os.path.join(os.getcwd(), f))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "781d1046-429a-4079-ab3b-c529d216cabe",
+   "execution_count": 26,
+   "id": "14cad8be-3588-4f6c-bcc9-cfdc1ed77158",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#reading data and preparing for the DB\n",
-    "def infer_data_type(value: str) -> str:\n",
-    "    \"\"\"Guess the data type from a single value.\"\"\"\n",
-    "    value = value.strip()\n",
-    "\n",
-    "    if value == \"\":\n",
-    "        return \"TEXT\"  # fallback for empty strings\n",
-    "\n",
-    "    if value.isdigit():\n",
-    "        return \"INTEGER\"\n",
-    "    \n",
-    "    try:\n",
-    "        float(value)\n",
-    "        return \"FLOAT\"\n",
-    "    except ValueError:\n",
-    "        pass\n",
-    "\n",
-    "    for fmt in (\"%Y-%m-%d\", \"%Y-%m-%d %H:%M:%S\"):\n",
-    "        try:\n",
-    "            datetime.strptime(value, fmt)\n",
-    "            return \"TIMESTAMP\"\n",
-    "        except ValueError:\n",
-    "            continue\n",
-    "\n",
-    "    return \"TEXT\"\n",
-    "\n",
-    "def normalize_column_name(name: str) -> str:\n",
-    "    \"\"\"Make column names safe for SQL.\"\"\"\n",
-    "    return name.strip().lower().replace(\" \", \"_\")\n",
-    "\n",
-    "def get_column_types_from_csv(csv_file_path: str) -> dict:\n",
-    "    \"\"\"Reads CSV and returns a dict of {column_name: inferred_type}.\"\"\"\n",
-    "    csv_path = Path(csv_file_path)\n",
+    "#getting the correct row. Not always the first row has the column titles. This may be found in the first five (5) rows\n",
+    "def get_column_title(file):\n",
+    "    csv_path = Path(file)\n",
     "    if not csv_path.exists():\n",
     "        raise FileNotFoundError(f\"{csv_file_path} not found.\")\n",
-    "\n",
     "    with csv_path.open('r', newline='', encoding='utf-8') as f:\n",
-    "        reader = csv.DictReader(f,delimiter=';')\n",
-    "        first_row = next(reader)\n",
-    "\n",
-    "    col_types = {}\n",
-    "    for col, val in first_row.items():\n",
-    "        col_name = normalize_column_name(col)\n",
-    "        col_type = infer_data_type(val)\n",
-    "        col_types[col_name] = col_type\n",
-    "\n",
-    "    return col_types"
+    "        aux=False\n",
+    "        count=0\n",
+    "        while not(aux):\n",
+    "            line=f.readline()\n",
+    "            if line.count(';')>=3:\n",
+    "                aux=True\n",
+    "    #order the columns (date, time, voltage, current, capacity)\n",
+    "        order=order_columns(line.strip())\n",
+    "        headings=[a for a in order.keys()]\n",
+    "        if 'date' not in order:\n",
+    "            try:\n",
+    "                date= re.search(r'\\d{4}-\\d{2}-\\d{2}', file)\n",
+    "                headings.insert(0,'date')\n",
+    "            except ValueError:\n",
+    "                pass\n",
+    "    #extract the data in the desired order\n",
+    "        aux=0\n",
+    "        print(headings)\n",
+    "        while aux<10: #extracting the remaining data\n",
+    "            line=f.readline().strip()\n",
+    "            data=line.split(';')\n",
+    "            db_data=[data[a] for a in order.values()]\n",
+    "            if 'date' not in order:\n",
+    "                db_data.insert(0,date.group(0))\n",
+    "            print(db_data)\n",
+    "            aux+=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
+   "id": "d61ba82a-e9cf-4f5c-89d7-34360ef5c8ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def order_columns(header_row):\n",
+    "    a=header_row.lower().split(';')\n",
+    "    expected_columns=['date','time','voltage','current','capacity']\n",
+    "    file_column_order={} #key=battery parameter, value=column number\n",
+    "    for aux in expected_columns:\n",
+    "     \tindex=0\n",
+    "     \twhile index<len(a):\n",
+    "     \t\tif aux in a[index]:\n",
+    "     \t\t\tfile_column_order[aux]=index\n",
+    "     \t\t\tbreak\n",
+    "     \t\tindex+=1\n",
+    "    return file_column_order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "ab8fbed4-735d-4afd-8837-112b37136218",
    "metadata": {},
    "outputs": [
@@ -312,35 +326,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'2025-09-23': 'TIMESTAMP', '08:51:02': 'TEXT', '$1': 'TEXT', '1': 'INTEGER', '': 'TEXT', '12000': 'INTEGER', '4190': 'INTEGER', '7': 'INTEGER', '0': 'INTEGER', '328': 'INTEGER', '6': 'INTEGER', '40': 'INTEGER'}\n",
-      "{'date': 'TIMESTAMP', 'time': 'TEXT', 'battery_state': 'TEXT', 'voltage[v]': 'FLOAT', 'current[ma]': 'INTEGER', 'capacity[mah]': 'INTEGER'}\n",
-      "{'date': 'TIMESTAMP', 'time': 'TEXT', 'battery_state': 'TEXT', 'voltage[v]': 'FLOAT', 'current[ma]': 'INTEGER', 'capacity[mah]': 'INTEGER'}\n",
-      "{'date': 'TIMESTAMP', 'time': 'TEXT', 'battery_state': 'TEXT', 'voltage[v]': 'FLOAT', 'current[ma]': 'INTEGER', 'capacity[mah]': 'INTEGER'}\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'strip'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m txt_files:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mget_column_types_from_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 43\u001b[39m, in \u001b[36mget_column_types_from_csv\u001b[39m\u001b[34m(csv_file_path)\u001b[39m\n\u001b[32m     41\u001b[39m col_types = {}\n\u001b[32m     42\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m col, val \u001b[38;5;129;01min\u001b[39;00m first_row.items():\n\u001b[32m---> \u001b[39m\u001b[32m43\u001b[39m     col_name = \u001b[43mnormalize_column_name\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcol\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     44\u001b[39m     col_type = infer_data_type(val)\n\u001b[32m     45\u001b[39m     col_types[col_name] = col_type\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 29\u001b[39m, in \u001b[36mnormalize_column_name\u001b[39m\u001b[34m(name)\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mnormalize_column_name\u001b[39m(name: \u001b[38;5;28mstr\u001b[39m) -> \u001b[38;5;28mstr\u001b[39m:\n\u001b[32m     28\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Make column names safe for SQL.\"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mname\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstrip\u001b[49m().lower().replace(\u001b[33m\"\u001b[39m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m_\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'NoneType' object has no attribute 'strip'"
+      "['date', 'time', 'voltage', 'current', 'capacity']\n",
+      "['2025-09-23', '15:54:47', '4.197', '6', '0']\n",
+      "['2025-09-23', '15:54:49', '4.197', '6', '0']\n",
+      "['2025-09-23', '15:54:51', '4.197', '6', '0']\n",
+      "['2025-09-23', '15:54:53', '4.197', '6', '0']\n",
+      "['2025-09-23', '15:54:55', '4.197', '6', '0']\n",
+      "['2025-09-23', '15:54:58', '4.196', '6', '0']\n",
+      "['2025-09-23', '15:54:59', '4.197', '6', '0']\n",
+      "['2025-09-23', '15:55:01', '4.196', '6', '0']\n",
+      "['2025-09-23', '15:55:03', '4.201', '6', '0']\n",
+      "['2025-09-23', '15:55:05', '4.196', '6', '0']\n",
+      "file 1charging_1_3.csv, extracted column: None\n",
+      "\n",
+      "['date', 'time', 'voltage', 'current', 'capacity']\n",
+      "['2025-09-23', '7:32:41', '3.285', '50', '0']\n",
+      "['2025-09-23', '7:32:43', '3.284', '50', '0']\n",
+      "['2025-09-23', '7:32:45', '3.3', '49', '1']\n",
+      "['2025-09-23', '7:32:47', '3.31', '49', '1']\n",
+      "['2025-09-23', '7:32:49', '3.32', '49', '1']\n",
+      "['2025-09-23', '7:32:51', '3.311', '49', '1']\n",
+      "['2025-09-23', '7:32:53', '3.311', '49', '2']\n",
+      "['2025-09-23', '7:32:55', '3.312', '50', '2']\n",
+      "['2025-09-23', '7:32:57', '3.317', '49', '2']\n",
+      "['2025-09-23', '7:32:59', '3.318', '49', '2']\n",
+      "file 1discharging_1000_3.csv, extracted column: None\n",
+      "\n",
+      "['date', 'time', 'voltage', 'current', 'capacity']\n",
+      "['2025-09-23', '16:18:41', '3.95', '0', '25']\n",
+      "['2025-09-23', '16:18:43', '3.95', '0', '25']\n",
+      "['2025-09-23', '16:18:45', '3.95', '0', '25']\n",
+      "['2025-09-23', '16:18:47', '3.95', '0', '25']\n",
+      "['2025-09-23', '16:18:49', '3.95', '0', '25']\n",
+      "['2025-09-23', '16:18:51', '3.95', '0', '25']\n",
+      "['2025-09-23', '16:18:53', '3.949', '0', '25']\n",
+      "['2025-09-23', '16:18:55', '3.95', '0', '25']\n",
+      "['2025-09-23', '16:18:57', '3.95', '0', '25']\n",
+      "['2025-09-23', '16:18:59', '3.95', '0', '25']\n",
+      "file 1rest_1_3.csv, extracted column: None\n",
+      "\n",
+      "['date', 'time', 'voltage', 'current', 'capacity']\n",
+      "['2025-08-06', '00:00.000', '3.461', '0.000', '931']\n",
+      "['2025-08-06', '00:02.000', '3.464', '0.000', '931']\n",
+      "['2025-08-06', '00:04.000', '3.464', '0.000', '931']\n",
+      "['2025-08-06', '00:06.000', '3.464', '0.000', '931']\n",
+      "['2025-08-06', '00:08.000', '3.464', '0.000', '931']\n",
+      "['2025-08-06', '00:10.000', '3.465', '0.000', '931']\n",
+      "['2025-08-06', '00:12.000', '3.472', '0.000', '931']\n",
+      "['2025-08-06', '00:14.000', '3.472', '0.000', '931']\n",
+      "['2025-08-06', '00:16.000', '3.472', '0.000', '931']\n",
+      "['2025-08-06', '00:18.000', '3.472', '0.000', '931']\n",
+      "file 2025-08-06_4_Resting.csv, extracted column: None\n",
+      "\n",
+      "['date', 'time', 'voltage', 'current', 'capacity']\n",
+      "['2025-08-06', '00:00:00.000', '3.75', '0.34', '0']\n",
+      "['2025-08-06', '00:00:02.000', '3.57', '0.50', '0']\n",
+      "['2025-08-06', '00:00:04.000', '3.54', '0.49', '0']\n",
+      "['2025-08-06', '00:00:06.000', '3.51', '0.49', '0']\n",
+      "['2025-08-06', '00:00:08.000', '3.58', '0.50', '1']\n",
+      "['2025-08-06', '00:00:10.000', '3.58', '0.50', '1']\n",
+      "['2025-08-06', '00:00:12.000', '3.57', '0.50', '1']\n",
+      "['2025-08-06', '00:00:14.000', '3.57', '0.49', '2']\n",
+      "['2025-08-06', '00:00:16.000', '3.58', '0.49', '2']\n",
+      "['2025-08-06', '00:00:18.000', '3.58', '0.49', '2']\n",
+      "file 2025-08-06_7_Discharge.csv, extracted column: None\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for a in txt_files:\n",
-    "    print(get_column_types_from_csv(a))"
+    "for a in txt_files[2:7]:\n",
+    "    b=get_column_title(a)\n",
+    "    print(f'file {a}, extracted column: {b}')\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14cad8be-3588-4f6c-bcc9-cfdc1ed77158",
+   "id": "822ba4ac-f9b6-4311-8f75-6dca660111d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "070b7846-cbaf-426a-a92e-74186100dc54",
    "metadata": {},
    "outputs": [],
    "source": []
