--- a/monitor_Icharger/testing.ipynb
+++ b/monitor_Icharger/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a8b14e0a-62ea-4c0f-822b-c630397380de",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "df868d1e-c6c5-404d-a351-0fd055110a81",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0e3e7412-3745-46c0-bfaf-623df0f6907d",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "4ca706d9-27e4-4225-b8e2-5843d9781202",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "fabf74c5-a6f2-4a29-8e32-7be5e6df281f",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "11f4a376-7c62-471d-8386-498794b12044",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "79c40024-30be-45e2-bf6a-a87551053917",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
     "    result[3]=estado\n",
     "    return delimiter.join(result),estado #return the data as string\n",
     "\n",
-    "def save_file(estado,bateria,capacidad,ciclo,data):\n",
+    "def save_file(estado,bateria,capacidad,ciclo,data,base_time,current_time):\n",
     "    '''\n",
     "    Function for saving the data file (.csv)\n",
     "    By data analisis, each current state is compared to the previous four (4) states. \n",
@@ -159,6 +159,7 @@
     "            file_name=f\"{bateria}{most_common_elem}_{capacidad}_{ciclo}.csv\"\n",
     "        if not(file_name in dict_data):\n",
     "            dict_data[file_name]=[]\n",
+    "            base_time=current_time\n",
     "            state_file = open(file_name, \"w\")\n",
     "            state_file.write('date;system_hour;cycle_time;battery_state;voltage[V];current[mA];capacity[mAh]'+'\\n')#setting column titles\n",
     "            state_file.flush()\n",
@@ -173,12 +174,12 @@
     "        finally:\n",
     "            state_file.write(data+'\\n')\n",
     "            state_file.flush()\n",
-    "    return ciclo"
+    "    return ciclo,base_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "235a878a-0a33-405c-8e78-a997494a2b74",
    "metadata": {},
    "outputs": [
@@ -227,12 +228,12 @@
     "        if log_file:\n",
     "            log_file.write(data + '\\n')\n",
     "            log_file.flush()\n",
-    "            ciclo=save_file(estado,bateria,capacidad,ciclo,data)   "
+    "            ciclo,base_time=save_file(estado,bateria,capacidad,ciclo,data,base_time,time1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "b851755e-00b4-4207-a1db-98b9aab06a0e",
    "metadata": {},
    "outputs": [],
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "c199eed8-d118-448b-b909-ff9f22af6f40",
    "metadata": {},
    "outputs": [],
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "14cad8be-3588-4f6c-bcc9-cfdc1ed77158",
    "metadata": {},
    "outputs": [],
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "d61ba82a-e9cf-4f5c-89d7-34360ef5c8ee",
    "metadata": {},
    "outputs": [],
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "ab8fbed4-735d-4afd-8837-112b37136218",
    "metadata": {},
    "outputs": [
@@ -327,75 +328,49 @@
      "output_type": "stream",
      "text": [
       "['date', 'time', 'voltage', 'current', 'capacity']\n",
-      "['2025-09-23', '15:54:47', '4.197', '6', '0']\n",
-      "['2025-09-23', '15:54:49', '4.197', '6', '0']\n",
-      "['2025-09-23', '15:54:51', '4.197', '6', '0']\n",
-      "['2025-09-23', '15:54:53', '4.197', '6', '0']\n",
-      "['2025-09-23', '15:54:55', '4.197', '6', '0']\n",
-      "['2025-09-23', '15:54:58', '4.196', '6', '0']\n",
-      "['2025-09-23', '15:54:59', '4.197', '6', '0']\n",
-      "['2025-09-23', '15:55:01', '4.196', '6', '0']\n",
-      "['2025-09-23', '15:55:03', '4.201', '6', '0']\n",
-      "['2025-09-23', '15:55:05', '4.196', '6', '0']\n",
-      "file 1charging_1_3.csv, extracted column: None\n",
+      "['2025-09-23', '0:05:02', '3.339', '50', '0']\n",
+      "['2025-09-23', '0:00:02', '3.345', '50', '0']\n",
+      "['2025-09-23', '0:00:04', '3.35', '50', '1']\n",
+      "['2025-09-23', '0:00:06', '3.462', '50', '1']\n",
+      "['2025-09-23', '0:00:08', '3.425', '50', '1']\n",
+      "['2025-09-23', '0:00:10', '3.408', '49', '1']\n",
+      "['2025-09-23', '0:00:12', '3.376', '49', '2']\n",
+      "['2025-09-23', '0:00:14', '3.488', '49', '2']\n",
+      "['2025-09-23', '0:00:16', '3.405', '49', '2']\n",
+      "['2025-09-23', '0:00:18', '3.441', '50', '3']\n",
+      "file 1discharging_1000_2.csv, extracted column: None\n",
       "\n",
       "['date', 'time', 'voltage', 'current', 'capacity']\n",
-      "['2025-09-23', '7:32:41', '3.285', '50', '0']\n",
-      "['2025-09-23', '7:32:43', '3.284', '50', '0']\n",
-      "['2025-09-23', '7:32:45', '3.3', '49', '1']\n",
-      "['2025-09-23', '7:32:47', '3.31', '49', '1']\n",
-      "['2025-09-23', '7:32:49', '3.32', '49', '1']\n",
-      "['2025-09-23', '7:32:51', '3.311', '49', '1']\n",
-      "['2025-09-23', '7:32:53', '3.311', '49', '2']\n",
-      "['2025-09-23', '7:32:55', '3.312', '50', '2']\n",
-      "['2025-09-23', '7:32:57', '3.317', '49', '2']\n",
-      "['2025-09-23', '7:32:59', '3.318', '49', '2']\n",
-      "file 1discharging_1000_3.csv, extracted column: None\n",
+      "['2025-07-21', '00:00.000', '4.203', '0.37', '0.0']\n",
+      "['2025-07-21', '00:02.000', '4.204', '0.37', '0.0']\n",
+      "['2025-07-21', '00:04.000', '4.196', '0.37', '0.0']\n",
+      "['2025-07-21', '00:06.000', '4.207', '0.36', '0.0']\n",
+      "['2025-07-21', '00:08.000', '4.196', '0.36', '1.0']\n",
+      "['2025-07-21', '00:10.000', '4.196', '0.36', '1.0']\n",
+      "['2025-07-21', '00:12.000', '4.196', '0.36', '1.0']\n",
+      "['2025-07-21', '00:14.000', '4.196', '0.36', '1.0']\n",
+      "['2025-07-21', '00:16.000', '4.196', '0.35', '1.0']\n",
+      "['2025-07-21', '00:18.000', '4.196', '0.35', '2.0']\n",
+      "file 2025-07-21_1_Charge.csv, extracted column: None\n",
       "\n",
       "['date', 'time', 'voltage', 'current', 'capacity']\n",
-      "['2025-09-23', '16:18:41', '3.95', '0', '25']\n",
-      "['2025-09-23', '16:18:43', '3.95', '0', '25']\n",
-      "['2025-09-23', '16:18:45', '3.95', '0', '25']\n",
-      "['2025-09-23', '16:18:47', '3.95', '0', '25']\n",
-      "['2025-09-23', '16:18:49', '3.95', '0', '25']\n",
-      "['2025-09-23', '16:18:51', '3.95', '0', '25']\n",
-      "['2025-09-23', '16:18:53', '3.949', '0', '25']\n",
-      "['2025-09-23', '16:18:55', '3.95', '0', '25']\n",
-      "['2025-09-23', '16:18:57', '3.95', '0', '25']\n",
-      "['2025-09-23', '16:18:59', '3.95', '0', '25']\n",
-      "file 1rest_1_3.csv, extracted column: None\n",
-      "\n",
-      "['date', 'time', 'voltage', 'current', 'capacity']\n",
-      "['2025-08-06', '00:00.000', '3.461', '0.000', '931']\n",
-      "['2025-08-06', '00:02.000', '3.464', '0.000', '931']\n",
-      "['2025-08-06', '00:04.000', '3.464', '0.000', '931']\n",
-      "['2025-08-06', '00:06.000', '3.464', '0.000', '931']\n",
-      "['2025-08-06', '00:08.000', '3.464', '0.000', '931']\n",
-      "['2025-08-06', '00:10.000', '3.465', '0.000', '931']\n",
-      "['2025-08-06', '00:12.000', '3.472', '0.000', '931']\n",
-      "['2025-08-06', '00:14.000', '3.472', '0.000', '931']\n",
-      "['2025-08-06', '00:16.000', '3.472', '0.000', '931']\n",
-      "['2025-08-06', '00:18.000', '3.472', '0.000', '931']\n",
-      "file 2025-08-06_4_Resting.csv, extracted column: None\n",
-      "\n",
-      "['date', 'time', 'voltage', 'current', 'capacity']\n",
-      "['2025-08-06', '00:00:00.000', '3.75', '0.34', '0']\n",
-      "['2025-08-06', '00:00:02.000', '3.57', '0.50', '0']\n",
-      "['2025-08-06', '00:00:04.000', '3.54', '0.49', '0']\n",
-      "['2025-08-06', '00:00:06.000', '3.51', '0.49', '0']\n",
-      "['2025-08-06', '00:00:08.000', '3.58', '0.50', '1']\n",
-      "['2025-08-06', '00:00:10.000', '3.58', '0.50', '1']\n",
-      "['2025-08-06', '00:00:12.000', '3.57', '0.50', '1']\n",
-      "['2025-08-06', '00:00:14.000', '3.57', '0.49', '2']\n",
-      "['2025-08-06', '00:00:16.000', '3.58', '0.49', '2']\n",
-      "['2025-08-06', '00:00:18.000', '3.58', '0.49', '2']\n",
-      "file 2025-08-06_7_Discharge.csv, extracted column: None\n",
+      "['2025-09-23', '1:47:19', '3.85', '0', '127']\n",
+      "['2025-09-23', '0:00:02', '3.85', '0', '127']\n",
+      "['2025-09-23', '0:00:04', '3.85', '0', '127']\n",
+      "['2025-09-23', '0:00:06', '3.85', '0', '127']\n",
+      "['2025-09-23', '0:00:08', '3.85', '0', '127']\n",
+      "['2025-09-23', '0:00:10', '3.85', '0', '127']\n",
+      "['2025-09-23', '0:00:12', '3.85', '0', '127']\n",
+      "['2025-09-23', '0:00:14', '3.85', '0', '127']\n",
+      "['2025-09-23', '0:00:16', '3.85', '0', '127']\n",
+      "['2025-09-23', '0:00:18', '3.85', '0', '127']\n",
+      "file 1rest_1000_4.csv, extracted column: None\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for a in txt_files[2:7]:\n",
+    "for a in txt_files[-3:]:\n",
     "    b=get_column_title(a)\n",
     "    print(f'file {a}, extracted column: {b}')\n",
     "    print()"
