Adding timestamp to the registered csv files

--- a/monitor_Icharger/testing.ipynb
+++ b/monitor_Icharger/testing.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "4ca706d9-27e4-4225-b8e2-5843d9781202",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "f85795e9",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "464051d0",
    "metadata": {},
    "outputs": [],
@@ -174,12 +174,12 @@
     "                ciclo+=1\n",
     "            file_name=f\"{bateria}{most_common_elem}_{capacidad}_{ciclo}.csv\"\n",
     "        if not(file_name in dict_data):\n",
-    "            dict_data[file_name]=[]\n",
+    "            dict_data[file_name]=time.asctime(time.localtime())#register the time when the new file began recording\n",
     "            base_time=current_time\n",
     "            state_file = open(file_name, \"w\")\n",
     "            state_file.write('date;system_hour;cycle_time;battery_state;voltage[V];current[mA];capacity[mAh]'+'\\n')#setting column titles\n",
     "            state_file.flush()\n",
-    "        dict_data[file_name].append(data)\n",
+    "        # dict_data[file_name].append(data)\n",
     "        estados_pasados.pop(0)\n",
     "        \n",
     "        #writing data to the specific file\n",
@@ -192,19 +192,19 @@
     "            state_file.flush()\n",
     "        \n",
     "        #writing to DB\n",
-    "        #formato [date, cycle_time,voltage,current,capacity,file,cycle_number,nominal_capacity]\n",
-    "        aux=data.split(';')\n",
-    "        dataDB=[aux[0],aux[2],aux[4],aux[5],aux[6],file_name,ciclo,capacidad]\n",
-    "        try:\n",
-    "            insert_cycle_data(conn,estado,dataDB)\n",
-    "        except:\n",
-    "            print('problemas con ingresar datos en la base de datos')\n",
+    "        # #formato [date, cycle_time,voltage,current,capacity,file,cycle_number,nominal_capacity]\n",
+    "        # aux=data.split(';')\n",
+    "        # dataDB=[aux[0],aux[2],aux[4],aux[5],aux[6],file_name,ciclo,capacidad]\n",
+    "        # try:\n",
+    "        #     insert_cycle_data(conn,estado,dataDB)\n",
+    "        # except:\n",
+    "        #     print('problemas con ingresar datos en la base de datos')\n",
     "    return ciclo,base_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "235a878a-0a33-405c-8e78-a997494a2b74",
    "metadata": {},
    "outputs": [],
@@ -216,15 +216,15 @@
     "columns_to_extract=[0,1,2,4,7,8,17]#date, system_time,cycle_time, battery_state(charing/resting/discharging),voltage(V),current(mA),capacity(mAh)\n",
     "bateria='1'\n",
     "capacidad='1000'\n",
-    "ciclo=8\n",
+    "ciclo=12\n",
     "base_time=datetime.strptime(\"08:51:02\",\"%H:%M:%S\")\n",
     "\n",
-    "#database credential\n",
-    "conn = psycopg2.connect(host=\"localhost\", \n",
-    "                            port=5432, \n",
-    "                            database=\"mydb\",\n",
-    "                            user=\"myuser\", \n",
-    "                            password=\"mypassword\")\n",
+    "# #database credential\n",
+    "# conn = psycopg2.connect(host=\"localhost\", \n",
+    "#                             port=5432, \n",
+    "#                             database=\"mydb\",\n",
+    "#                             user=\"myuser\", \n",
+    "#                             password=\"mypassword\")\n",
     "\n",
     "if log_to_file:\n",
     "    log_file = open(f\"data_original_{bateria}_{capacidad}_{ciclo}.csv\", \"w\")\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "35d74f82",
    "metadata": {},
    "outputs": [
@@ -244,10 +244,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "problemas con ingresar datos en la base de datos\n",
-      "problemas con ingresar datos en la base de datos\n",
-      "problemas con ingresar datos en la base de datos\n",
-      "problemas con ingresar datos en la base de datos\n",
       "finished cicles \n",
       "closing program\n",
       "2025-09-23\n"
@@ -272,7 +268,36 @@
     "        #original data    \n",
     "        log_file.write(data + '\\n')\n",
     "        log_file.flush()\n",
-    "        ciclo,base_time=save_file(estado,bateria,capacidad,ciclo,data,base_time,time1,conn)"
+    "        ciclo,base_time=save_file(estado,bateria,capacidad,ciclo,data,base_time,time1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "35136d97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tue Oct  7 08:48:28 2025 1rest_1000_12.csv\n",
+      "Tue Oct  7 08:48:28 2025 1charging_1000_13.csv\n",
+      "Tue Oct  7 08:48:30 2025 1rest_1000_13.csv\n",
+      "Tue Oct  7 08:48:30 2025 1discharging_1000_13.csv\n",
+      "Tue Oct  7 08:48:30 2025 1charging_1000_14.csv\n",
+      "Tue Oct  7 08:48:30 2025 1rest_1000_14.csv\n",
+      "Tue Oct  7 08:48:30 2025 1discharging_1000_14.csv\n",
+      "Tue Oct  7 08:48:30 2025 1charging_1000_15.csv\n",
+      "Tue Oct  7 08:48:31 2025 1rest_1000_15.csv\n",
+      "Tue Oct  7 08:48:31 2025 1discharging_1000_15.csv\n",
+      "Tue Oct  7 08:48:31 2025 1finished_1000_15.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a,b in dict_data.items():\n",
+    "    print(b,a)"
    ]
   },
   {
